submit-test: Testing creation

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "concurrently": "^5.1.0",
+    "jest-junit": "^10.0.0",
     "json-serve": "^0.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
